2014-02-13  Teodor Zlatanov  <tzz@lifelogs.com>

	* auth-source.el (auth-sources): Add pointer to what the .gpg extension
	in `auth-sources' means and link to EPA docs.

2014-02-12  Lars Ingebrigtsen  <larsi@gnus.org>

	* nnmail.el (nnmail-expand-newtext): Further sub-match fixups
	(bug#12375).

2014-02-10  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-art.el (gnus-article-goto-part): Find a button in the body first.
	(gnus-mime-buttonize-attachments-in-header): Number hidden buttons.

2014-02-09  Lars Ingebrigtsen  <larsi@gnus.org>

	* message.el (message-tab): Mention what happens on normal tabs
	(bug#11297).

2014-02-08  Glenn Morris  <rgm@gnu.org>

	* auth-source.el (auth-sources): Doc fix.  (Bug#16642)

2014-02-07  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-art.el (gnus-mime-buttonize-attachments-in-header): Display
	buttons that are hidden in unselected alternative part as well.
	(gnus-mime-display-alternative): Redraw attachment buttons in header.

	* gmm-utils.el (gmm-flet, gmm-labels): Add edebug spec.

2014-02-07  Lars Ingebrigtsen  <larsi@gnus.org>

	* gnus-srvr.el (gnus-server-toggle-cloud-server): New command and
	keystroke.
	(gnus-server-toggle-cloud-server): Only allow clouding applicable
	types.

	* ietf-drums.el (ietf-drums-parse-address): Don't bug out when called
	with an empty string.

2014-02-06  Lars Ingebrigtsen  <larsi@gnus.org>

	* gnus-msg.el (gnus-summary-cancel-article): `user-mail-address' is
	buffer-local in some buffers, so bind it explicitly in the buffer we're
	trying to cancel the article in (bug#10808).

2014-02-05  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus.el, gnus-xmas.el (gnus-copy-overlay, gnus-overlays-at):
	New functions.

	* gnus-art.el (gnus-mime-display-attachment-buttons-in-header):
	New user option.
	(gnus-mime-buttonize-attachments-in-header): New function.
	(gnus-article-prepare): Use it.
	(gnus-mime-inline-part): Suppress extra newline.
	(gnus-mm-display-part): Save excursion;